Fix unintended body overflow

--- a/less/pages/home.less
+++ b/less/pages/home.less
@@ -4,6 +4,10 @@
 *
 --------------------------------------------------------------------*/
 
+.home {
+  overflow-x: hidden;
+}
+
 #implementations {
   @color-white: #fff;
   @color-grey: rgba( 255, 255, 255, 0.6);
